# sgsmooth

./: CMakeLists.txt
include/sgsmooth/: SGSmooth.hpp
src/: SGSmooth.cpp
